[package]
name = "bartender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures-util = "0.3.28"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
warp = "0.3.6"
tonic = "0.10.0"
tonic_lnd = { git = "https://github.com/Synota-io/tonic_lnd.git" }
lightning-invoice = "0.25.0"
dotenv = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
clap = { version = "4.4.6", features = ["derive"] }
